--- a/style.css
+++ b/style.css
@@ -1,4 +1,43 @@
-/* Add a black background color to the top navigation */
+.landing {
+    background-image: url("images/background.jpg");
+    width: 100%;
+    height: 600px;
+    text-align: center;
+    background-size: cover;
+}
+
+.hello {
+    position: absolute;
+    left: 20%;
+    top: 5%;
+    font-size: 100px;
+    font-weight: bolder;
+    color: black;
+}
+
+.m {
+    position: absolute;
+    left: 15%;
+    top: 20%;
+    font-size: 50px;
+    font-weight: bolder;
+    color: black;
+}
+
+.mm {
+    font-size: 50px;
+    font-weight: bolder;
+    color: black;
+}
+
+.s {
+    position: absolute;
+    left: 25%;
+    top: 65%;
+    font-size: 60px;
+    font-weight: bolder;
+    color: black;
+}
 
 .topnav {
     background-color: #333;
@@ -34,7 +73,7 @@
 /* Add a color to the active/current link */
 
 .topnav a.active {
-    background-color: #4CAF50;
+    background-color: #11e79f;
     color: white;
 }
 
@@ -79,6 +118,19 @@ button:hover {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
+}
+
+.btn {
+    background-color: white;
+    color: black;
+    border: 0px;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 
