dir trav + upload +sqlijection + osinjection commit

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ input[type=password] {
 /* Set a style for all buttons */
 
 button {
-    background-color: #4CAF50;
+    background-color: #11e79f;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
