--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .landing {
-    background-image: url("images/background.jpg");
+    background-image: url("images/rel1.jpg");
     width: 100%;
     height: 600px;
     text-align: center;
@@ -12,7 +12,7 @@
     top: 5%;
     font-size: 100px;
     font-weight: bolder;
-    color: black;
+    color: white;
 }
 
 .m {
@@ -21,13 +21,13 @@
     top: 20%;
     font-size: 50px;
     font-weight: bolder;
-    color: black;
+    color: white;
 }
 
 .mm {
     font-size: 50px;
     font-weight: bolder;
-    color: black;
+    color: white;
 }
 
 p {
@@ -40,7 +40,7 @@ p {
     top: 65%;
     font-size: 60px;
     font-weight: bolder;
-    color: black;
+    color: white;
 }
 
 .topnav {
@@ -77,11 +77,12 @@ p {
 /* Add a color to the active/current link */
 
 .topnav a.active {
-    background-color: #11e79f;
+    background-color: ##057e55;
     color: white;
 }
 
 body {
+    background-color: #057e55;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -102,7 +103,7 @@ input[type=password] {
 /* Set a style for all buttons */
 
 button {
-    background-color: #11e79f;
+    background-color: #057e55;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -116,8 +117,8 @@ button:hover {
 }
 
 .reabtn {
-    background-color: white;
-    color: black;
+    background-color: #057e55;
+    color: white;
     position: absolute;
     font-size: 20px;
     right: 0;
@@ -125,7 +126,9 @@ button:hover {
 
 .loginbtn {
     width: 100px;
-    background-color: white;
+    color: #057e55;
+    background-color: #057e55;
+    cursor: default;
 }
 
 
@@ -138,8 +141,8 @@ button:hover {
 }
 
 .btn {
-    background-color: white;
-    color: black;
+    background-color: #057e55;
+    color: white;
     border: 0px;
     padding: 15px;
     text-align: center;
